--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </section>
 
     <footer>
-      <p>© 2025 Ryan Zaro. All Rights Reserved.</p>
+      <p>ryanzaro</a>. | &copy; 2025.</p>
     </footer>
 
     <!-- Feather Icons -->
