--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Feather Icons -->
     <script src="https://unpkg.com/feather-icons"></script>
-    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="stylesheet" href="style/style.css" />
   </head>
 
   <body>
@@ -155,6 +155,6 @@
       feather.replace();
     </script>
 
-    <script src="/script/script.js"></script>
+    <script src="script/script.js"></script>
   </body>
 </html>
