--- a/index.html
+++ b/index.html
@@ -155,6 +155,6 @@
       feather.replace();
     </script>
 
-    <script src="script/script.js"></script>
+    <script src="Script/script.js"></script>
   </body>
 </html>
