Edit to di Hero

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- Hero -->
     <section id="home" class="hero">
-      <h1>Welcome <span id="username"></span> My Portfolio</h1>
+      <h1>Welcome <span id="username"></span> to My Portfolio</h1>
       <p>Connecting Technology, Building Future</p>
     </section>
 
